Mon Oct  7 18:25:35 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Changed the silc_attribute_payload_encode to support list
	  of attributes (function may be called several times to add
	  a new attribute).  Removed the silc_attribute_payload_encode_list
	  function.  The encoding function now also automatically encodes
	  the data, so the caller does not need to do that.  Affected
	  files lib/silccore/silcattrs.[ch].

	* Added support for replying on behalf of the user to the
	  Requested Attributes in WHOIS command in the server.  Affected
	  file silcd/server_query.c.

	* SILC_NOT_IMPLEMENTED macro use SILC_LOG_INFO now instead of
	  SILC_LOG_DEBUG.  Affected file lib/silcutil/silclog.h.

Sun Oct  6 16:48:32 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Don't swtich to become primary router if we are backup if
	  decryption error has occurred.  Affected file silcd/server.c.

	* Fixed a bug in backup router IP address comparison in
	  silc_server_backup_get.

	  Save now also the port of the server/router and use that
	  in comparison as well.  Affected file silcd/server_backup.c.

	* Normal server now reconnects to backup router automatically
	  if connection is lost to it.  Affected file silcd/server.c.

Thu Sep 26 13:51:02 CEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* If packet processing fails (like integrity check fails)
	  the connection is closed now.  Affected files are
	  lib/silccore/silcpacket.c and silcd/server.c.

Mon Sep 23 10:59:39 CEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed double free in RSA public key set function
	  silc_rsa_set_public_key.  Affected file lib/silccrypt/rsa.c.
	  Bug #29.

Sun Sep 22 14:54:05 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Rewrote WHOIS, WHOWAS and IDENTIFY commands in the server.
	  Added server_query.[ch] which provides one interface for
	  querying information using all three commands.

	* Changed all "typedef unsigned char" in core library to
	  "typedef SilcUInt8".
